--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https//NicatAliyev26.github.io/Taxi-website",
+  "homepage": "http://NicatAliyev26.github.io/Taxi-website",
   "name": "mytaxi",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +16,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy":"npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
