--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://NicatAliyev26.github.io/Taxicars",
+  "homepage": "http://NicatAliyev26.github.io/Taxi-website",
   "name": "mytaxi",
   "version": "0.1.0",
   "private": true,
